TimelyDataDisplay fully implemented, awaiting, scoped timely data toggling on DetailedDataDisplay and better location names

--- a/src/index.css
+++ b/src/index.css
@@ -5,5 +5,9 @@
 @tailwind utilities;
 
 .active {
-	@apply text-blue-400 border-2 border-blue-400
+	@apply text-blue-400 border-2 border-blue-400;
+}
+
+.active-timeType {
+	@apply text-green-300;
 }
