--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
+*,
+*::after,
+*::before {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+body {
+	width: 100vw;
+	overflow-x: hidden;
+}
+
 .text-font {
 	font-family: 'Quicksand';
 	font-weight: 600;
