--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 
 .active {
-	@apply text-blue-400 border-2 border-blue-400;
+	@apply text-blue-400;
 }
 
 .active-timeType {
@@ -13,5 +13,5 @@
 }
 
 .nav-item {
-	@apply bg-gray-800 cursor-pointer border-2 py-1 px-3 rounded-2xl cursor-pointer;
+	@apply w-1/4 h-full flex items-center justify-center text-center text-sm md:text-lg cursor-pointer hover:bg-gray-600 transition;
 }
