--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,10 @@
 @tailwind components;
 @tailwind utilities;
 
-/* .container { */
-/* 	@apply */
-/* } */
+.container {
+	width: 85%;
+	@apply my-0 mx-auto;
+}
 
 .data-toggler {
 	@apply py-1 px-4 border border-green-300 text-green-200 rounded-full mr-3;
