--- a/src/index.css
+++ b/src/index.css
@@ -13,16 +13,19 @@
 	@apply py-1 px-4 border border-green-300 text-green-200 rounded-full mr-3;
 }
 
+/* Applying reusable styles in DataCardsDisplay */
+
 .data-card {
-	@apply bg-gray-100 py-3 px-3 rounded-xl flex items-center justify-center;
+	@apply bg-gray-100 rounded-xl flex items-center justify-center text-center;
 }
 
 .data-card > * {
-	border: 1px solid gray;
+	/* border: 1px solid gray; */
 }
 
 .data-icon {
-	@apply block text-gray-600 mr-3;
+	@apply block text-gray-500;
+	display: none;
 }
 
 .data-info {
@@ -30,14 +33,14 @@
 }
 
 .data {
-	@apply font-bold text-blue-400;
+	@apply font-bold text-blue-400 text-sm;
+	font-family: 'Montserrat';
 }
 
 .data-label {
 	@apply text-gray-400 font-bold text-xs;
-	font-family: 'Montserrat';
 }
-
+/* =============== */
 .active {
 	@apply text-blue-400 font-bold;
 }
