--- a/src/index.css
+++ b/src/index.css
@@ -13,30 +13,31 @@
 	@apply py-1 px-4 border border-green-300 text-green-200 rounded-full text-xs;
 }
 
-/* Applying reusable styles in DataCardsDisplay */
+/* /1* Applying reusable styles in DataCardsDisplay *1/ */
 
-.data-card {
-	@apply bg-gray-100 rounded-xl flex items-center justify-center text-center;
-}
+/* .data-card { */
+/* 	@apply bg-gray-100 rounded-xl flex items-center justify-center text-center; */
+/* } */
 
-.data-icon {
-	@apply block text-gray-500;
-	display: none;
-}
+/* .data-icon { */
+/* 	@apply block text-gray-500; */
+/* 	display: none; */
+/* } */
 
-.data-info {
-	@apply w-3/4;
-}
+/* .data-info { */
+/* 	@apply w-3/4; */
+/* } */
 
-.data {
-	@apply font-bold text-blue-400 text-sm xs:text-base;
-	font-family: 'Montserrat';
-}
+/* .data { */
+/* 	@apply font-bold text-blue-400 text-sm xs:text-base; */
+/* 	font-family: 'Montserrat'; */
+/* } */
 
-.data-label {
-	@apply text-gray-400 font-bold text-xs xs:text-sm;
-}
-/* =============== */
+/* .data-label { */
+/* 	@apply text-gray-400 font-bold text-xs xs:text-sm; */
+/* } */
+/* /1* =============== *1/ */
+
 .active {
 	@apply text-blue-400 font-bold;
 }
