--- a/src/index.css
+++ b/src/index.css
@@ -25,11 +25,23 @@
 	@apply transition duration-75 ease-in-out transform scale-175 hover:text-gray-100;
 }
 
+/* .swiper-button-prev::after { */
+/* 	@apply text-green-500 transform scale-50 -left-0; */
+/* } */
+
+/* .swiper-button-next::after { */
+/* 	@apply text-blue-500 transform scale-50 -right-0; */
+/* } */
+
 /* CUSTOM CLASSES */
 
 .container {
 	width: 85%;
-	/* @apply my-0 mx-auto; */
+	position: relative;
+}
+
+.container .swiper-container {
+	@apply rounded-3xl;
 }
 
 .text-font {
@@ -52,7 +64,3 @@
 .num-font {
 	font-family: 'Roboto';
 }
-
-/* .timely-data-display::-webkit-scrollbar { */
-/* 	display: none; */
-/* } */
